--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,13 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "/dlf/",
+            "repo": "https://github.com/danilopezf10/dlf.git"
+          }
         }
       }
     }
