--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.5",
+    "angular-cli-ghpages": "^2.0.1",
     "express": "^4.18.2",
     "firebase": "^10.14.1",
     "primeflex": "^3.3.1",
